--- a/src/components/Signup.scss
+++ b/src/components/Signup.scss
@@ -12,7 +12,7 @@ $medium-turquoise: #3dccc7;
 $blizzard-blue: #9ceaef;
 $celeste: #c4fff9;
 
-.login {
+.signup {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -24,7 +24,7 @@ $celeste: #c4fff9;
 		margin-bottom: 50px;
 	}
 
-	.login-container {
+	.signup-container {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -41,7 +41,8 @@ $celeste: #c4fff9;
 			}
 		}
 
-		.password-container {
+		.password1,
+		.password2 {
 			padding: 10px;
 
 			p {
@@ -50,9 +51,9 @@ $celeste: #c4fff9;
 		}
 
 		.buttons {
-			margin-bottom: 10px;
+			margin: 10px;
 
-			#login-signup-btn {
+			#signup-login-btn {
 				border-radius: 5px;
 				margin-right: 20px;
 
@@ -67,8 +68,7 @@ $celeste: #c4fff9;
 					color: $tea-green;
 				}
 			}
-
-			#login-btn {
+			#signup-btn {
 				border-radius: 5px;
 				margin-left: 10px;
 
