--- a/src/application.scss
+++ b/src/application.scss
@@ -21,6 +21,12 @@ button:hover {
 	cursor: pointer;
 }
 
-body {
+html,
+body,
+#root,
+.app,
+.app > div {
+	height: 100%;
+	width: 100%;
 	background-color: $tea-green;
 }
