--- a/src/container/BucketList.scss
+++ b/src/container/BucketList.scss
@@ -19,9 +19,9 @@ $celeste: #c4fff9;
 
   padding: 15px 0;
 
-  background-color: $cadet-blue;
-  border: 2px solid $medium-turquoise;
-  // border-radius: 10px;
+  background-color: $light-green;
+  border: 2px solid $mountain-meadow;
+  border-radius: 10px;
   width: 90%;
   overflow: scroll;
 }
